syntax = "proto3";
package task;

service TaskService {
  rpc CreateTask (CreateTaskRequest) returns (Task) {}
  rpc ListTasks (ListTasksRequest) returns (TaskList) {}
}

message CreateTaskRequest {
  string title = 1;
}

message ListTasksRequest {}

message Task {
  int32 id = 1;
  string title = 2;
}

message TaskList {
  repeated Task tasks = 1;
}
